--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 joblib==1.0.1
 kiwisolver==1.3.1
-matplotlib==3.4.0
+MarkupSafe==1.1.1
 numpy==1.20.1
 pandas==1.2.3
 Pillow==8.1.2
